// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostGroups matches last snapshot 1`] = `
<View>
  <View>
    <Text>
      Posted In: 
    </Text>
    <View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          numberOfLines={1}
        >
          One
        </Text>
      </View>
      <View>
        <Text>
           and 
        </Text>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <Text>
            2 others
          </Text>
        </View>
      </View>
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <Icon
        name="ArrowDown"
      />
    </View>
  </View>
</View>
`;

exports[`PostGroups matches last snapshot when expanded 1`] = `
<View>
  <View>
    <Text>
      Posted In: 
    </Text>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <Icon
        name="ArrowUp"
      />
    </View>
  </View>
  <View>
    <View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Image
          source={
            {
              "uri": "foo.png",
            }
          }
        />
        <Text
          numberOfLines={1}
        >
          One
        </Text>
      </View>
    </View>
    <View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Image
          source={
            {
              "uri": "https://d3ngex8q79bk55.cloudfront.net/misc/default_community_avatar.png",
            }
          }
        />
        <Text
          numberOfLines={1}
        >
          Two
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Image
          source={
            {
              "uri": "https://d3ngex8q79bk55.cloudfront.net/misc/default_community_avatar.png",
            }
          }
        />
        <Text
          numberOfLines={1}
        >
          Three
        </Text>
      </View>
    </View>
  </View>
</View>
`;
